--- a/.amplifyrc
+++ b/.amplifyrc
@@ -1,14 +1,14 @@
 {
     "providers": {
         "awscloudformation": {
-            "AuthRoleName": "awsamplifyweb-20181010210134-authRole",
-            "UnauthRoleArn": "arn:aws:iam::998141903405:role/awsamplifyweb-20181010210134-unauthRole",
-            "AuthRoleArn": "arn:aws:iam::998141903405:role/awsamplifyweb-20181010210134-authRole",
-            "Region": "eu-west-1",
-            "DeploymentBucketName": "awsamplifyweb-20181010210134-deployment",
-            "UnauthRoleName": "awsamplifyweb-20181010210134-unauthRole",
-            "StackName": "awsamplifyweb-20181010210134",
-            "StackId": "arn:aws:cloudformation:eu-west-1:998141903405:stack/awsamplifyweb-20181010210134/58b823f0-cd0a-11e8-8375-503ac9e74c8d"
+            "AuthRoleName": "awsamplifyweb-20181012190415-authRole",
+            "UnauthRoleArn": "arn:aws:iam::998141903405:role/awsamplifyweb-20181012190415-unauthRole",
+            "AuthRoleArn": "arn:aws:iam::998141903405:role/awsamplifyweb-20181012190415-authRole",
+            "Region": "us-east-1",
+            "DeploymentBucketName": "awsamplifyweb-20181012190415-deployment",
+            "UnauthRoleName": "awsamplifyweb-20181012190415-unauthRole",
+            "StackName": "awsamplifyweb-20181012190415",
+            "StackId": "arn:aws:cloudformation:us-east-1:998141903405:stack/awsamplifyweb-20181012190415/4992c960-ce8c-11e8-8263-50d5cd1ea836"
         }
     }
 }
