--- a/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
+++ b/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
@@ -78,52 +78,52 @@
 				}
 			}
 		},
-		"authcognito8a7a8d84": {
+		"authcognito9ff81d74": {
 			"Type": "AWS::CloudFormation::Stack",
 			"Properties": {
-				"TemplateURL": "https://s3.amazonaws.com/awsamplifyweb-20181010210134-deployment/amplify-cfn-templates/auth/cognito8a7a8d84-cloudformation-template.yml",
+				"TemplateURL": "https://s3.amazonaws.com/awsamplifyweb-20181012190415-deployment/amplify-cfn-templates/auth/cognito9ff81d74-cloudformation-template.yml",
 				"Parameters": {
-					"identityPoolName": "cognito8a7a8d84_identitypool_8a7a8d84",
+					"identityPoolName": "cognito9ff81d74_identitypool_9ff81d74",
 					"allowUnauthenticatedIdentities": false,
 					"thirdPartyAuth": false,
-					"lambdaLogPolicy": "cognito8a7a8d84_lambda_log_policy",
-					"openIdLambdaRoleName": "cognito8a7a8d84_openid_lambda_role",
-					"openIdRolePolicy": "cognito8a7a8d84_openid_pass_role_policy",
-					"openIdLambdaIAMPolicy": "cognito8a7a8d84_openid_lambda_iam_policy",
-					"openIdLogPolicy": "cognito8a7a8d84_openid_lambda_log_policy",
-					"userPoolName": "cognito8a7a8d84_userpool_8a7a8d84",
+					"lambdaLogPolicy": "cognito9ff81d74_lambda_log_policy",
+					"openIdLambdaRoleName": "cognito9ff81d74_openid_lambda_role",
+					"openIdRolePolicy": "cognito9ff81d74_openid_pass_role_policy",
+					"openIdLambdaIAMPolicy": "cognito9ff81d74_openid_lambda_iam_policy",
+					"openIdLogPolicy": "cognito9ff81d74_openid_lambda_log_policy",
+					"userPoolName": "cognito9ff81d74_userpool_9ff81d74",
 					"autoVerifiedAttributes": "email",
 					"mfaConfiguration": "OFF",
 					"mfaTypes": "SMS Text Message",
-					"roleName": "cognito8a7a8d84_sns-role",
-					"roleExternalId": "cognito8a7a8d84_role_external_id",
-					"policyName": "cognito8a7a8d84-sns-policy",
-					"smsAuthenticationMessage": "Your authentication code is {####}",
+					"roleName": "cognito9ff81d74_sns-role",
+					"roleExternalId": "cognito9ff81d74_role_external_id",
+					"policyName": "cognito9ff81d74-sns-policy",
+					"smsAuthenticationMessage": "Your authentication CODE is {####}",
 					"smsVerificationMessage": "Your verification code is {####}",
 					"emailVerificationSubject": "Your verification code",
 					"emailVerificationMessage": "Your verification code is {####}",
 					"defaultPasswordPolicy": false,
 					"passwordPolicyMinLength": 8,
 					"passwordPolicyCharacters": "Requires Lowercase,Requires Uppercase,Requires Numbers,Requires Symbols",
-					"requiredAttributes": "email",
-					"userpoolClientName": "cognito8a7a8d84_app_client",
+					"requiredAttributes": "email,name",
+					"userpoolClientName": "cognito9ff81d74_app_client",
 					"userpoolClientGenerateSecret": true,
 					"userpoolClientRefreshTokenValidity": 30,
-					"userpoolClientReadAttributes": "email",
-					"mfaLambdaRole": "cognito8a7a8d84_totp_lambda_role",
-					"mfaLambdaLogPolicy": "cognito8a7a8d84_totp_lambda_log_policy",
-					"mfaPassRolePolicy": "cognito8a7a8d84_totp_pass_role_policy",
-					"mfaLambdaIAMPolicy": "cognito8a7a8d84_totp_lambda_iam_policy",
-					"userpoolClientLambdaRole": "cognito8a7a8d84_userpoolclient_lambda_role",
-					"userpoolClientLogPolicy": "cognito8a7a8d84_userpoolclient_lambda_log_policy",
-					"userpoolClientLambdaPolicy": "cognito8a7a8d84_userpoolclient_lambda_iam_policy",
+					"userpoolClientReadAttributes": "email,name",
+					"mfaLambdaRole": "cognito9ff81d74_totp_lambda_role",
+					"mfaLambdaLogPolicy": "cognito9ff81d74_totp_lambda_log_policy",
+					"mfaPassRolePolicy": "cognito9ff81d74_totp_pass_role_policy",
+					"mfaLambdaIAMPolicy": "cognito9ff81d74_totp_lambda_iam_policy",
+					"userpoolClientLambdaRole": "cognito9ff81d74_userpoolclient_lambda_role",
+					"userpoolClientLogPolicy": "cognito9ff81d74_userpoolclient_lambda_log_policy",
+					"userpoolClientLambdaPolicy": "cognito9ff81d74_userpoolclient_lambda_iam_policy",
 					"userpoolClientSetAttributes": false,
 					"useDefault": "default",
-					"unAuthRoleName": "awsamplifyweb-20181010210134-unauthRole",
-					"authRoleName": "awsamplifyweb-20181010210134-authRole",
-					"unAuthRoleArn": "arn:aws:iam::998141903405:role/awsamplifyweb-20181010210134-unauthRole",
-					"authRoleArn": "arn:aws:iam::998141903405:role/awsamplifyweb-20181010210134-authRole",
-					"resourceName": "cognito8a7a8d84",
+					"unAuthRoleName": "awsamplifyweb-20181012190415-unauthRole",
+					"authRoleName": "awsamplifyweb-20181012190415-authRole",
+					"unAuthRoleArn": "arn:aws:iam::998141903405:role/awsamplifyweb-20181012190415-unauthRole",
+					"authRoleArn": "arn:aws:iam::998141903405:role/awsamplifyweb-20181012190415-authRole",
+					"resourceName": "cognito9ff81d74",
 					"authSelections": "identityPoolAndUserPool"
 				}
 			}
