--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "aws-amplify": "^1.1.6",
+    "aws-amplify-react": "^2.0.7",
     "history": "^4.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
